kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: rook.png
    gethomepage.dev/name: Rook
    gethomepage.dev/group: Storage
    gethomepage.dev/pod-selector: app.kubernetes.io/name=ceph-mgr
spec:
  hostnames: ["rook.boondoggle.dev"]
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
